# segmentation-measurement-tool

./: .gitignore  CLAUDE.md  README.md  open_test_data.sh  pyproject.toml
.github/workflows/: ci.yml  docs.yml
doc/: cli.md  napari.md  start.md
example-data/: membrane-seg.tif
example-data/images/: membrane.tif  nuclei.tif
example-data/segmentations/: nucleus-seg.tif
segmentation_measurement/: __init__.py  _cell_nucleus_widget.py  _classification_widget.py  _cli.py  _clustering_widget.py  _groups.py  _groups_widget.py  _intensity_widget.py  _layer_features.py  _morphology_widget.py  _table_manipulation_widget.py  _threshold_widget.py  _utils.py  _widget.py  analysis.py  cell_nucleus.py  intensity.py  morphology.py  napari.yaml  postprocessing.py  table_manipulation.py
tests/: conftest.py  test_analysis.py  test_cell_nucleus.py  test_cell_nucleus_widget.py  test_classification.py  test_classification_widget.py  test_cli_open.py  test_clustering.py  test_clustering_widget.py  test_groups.py  test_groups_widget.py  test_intensity.py  test_intensity_widget.py  test_morphology.py  test_morphology_widget.py  test_postprocessing.py  test_table_manipulation.py  test_table_manipulation_widget.py  test_threshold_widget.py  test_widget.py
